Ultime modifiche per inserimento

--- a/Boffalora/Boffalora/src/main/resources/static/boffalora.html
+++ b/Boffalora/Boffalora/src/main/resources/static/boffalora.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style4.css">
 </head>
 <body>
-    <img src="Documents\Proloco_Boffa\LOGO-PROLOCO.png" alt="Immagine Logo">
     <h1>Tesseramento Proloco</h1>
     <div class="container">
         <h3>Dati Anagrafici</h3>
@@ -38,7 +37,7 @@
                 </div>
                 <div class="input-group">
                     <div class="input-group">
-                        <label for="data_nascita">Data di Nascita</label>
+                        <label for="dataNascita">Data di Nascita</label>
                         <input type="date" id="dataNascita" name="dataNascita"  required>
                     </div>
                 </div>
@@ -99,6 +98,8 @@
             </div>
         </form>
     </div>
-    <button type="submit">Invia</button>
+    <!--<button type="submit">Invia</button>-->
+    <button id="mioBottone">Invia</button>
+    <script src="script.js"></script> </body>
 </body>
 </html>
