--- a/Boffalora/Boffalora/src/main/resources/static/boffalora.html
+++ b/Boffalora/Boffalora/src/main/resources/static/boffalora.html
@@ -100,6 +100,6 @@
     </div>
     <!--<button type="submit">Invia</button>-->
     <button id="mioBottone">Invia</button>
-    <script src="script.js"></script> </body>
+    <script src="script.js"></script>
 </body>
 </html>
