modifiche per attesa risposta del backend

--- a/Boffalora/Boffalora/src/main/resources/static/boffalora.html
+++ b/Boffalora/Boffalora/src/main/resources/static/boffalora.html
@@ -98,6 +98,9 @@
             </div>
         </form>
     </div>
+    <div id="loading-overlay" style="display: none;">
+        <div class="loading-spinner"></div>
+    </div>
     <!--<button type="submit">Invia</button>-->
     <button id="mioBottone">Invia</button>
     <script src="script.js"></script>
