--- a/Boffalora/Boffalora/src/main/resources/static/boffalora.html
+++ b/Boffalora/Boffalora/src/main/resources/static/boffalora.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Tesseramento Proloco</h1>
+    <div style="display: flex; align-items: center;">
+        <img src="images/LOGO.png" alt="" style="margin-right: 10px;">
+        <h1>Tesseramento Proloco</h1>
+    </div>
     <div class="container">
         <h3>Dati Anagrafici</h3>
         <form id="myForm">
